--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,8 @@
 }
 
 .play-button {
-    font-size-adjust: 12px; 
-    padding: 10px;
+    font-size-adjust: 12px; /* adjust the font size*/
+    padding:5px 10px; /* adjust the padding*/
     background-color: #4CAF50;
     color: white;
     border: none;
