--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,9 @@
 body {
-    background-image: url('images/background.png');
+    background-image: url('../images/background.png');
     background-size: cover; /* Ensures the image covers the entire background */
     background-repeat: no-repeat;
     background-position: center;
 }
-
 
 h2 {
     margin-top: 20px;
